--- a/src/app/otro/otro.component.html
+++ b/src/app/otro/otro.component.html
@@ -1,4 +1,6 @@
 
-<app-buscador></app-buscador>
+<app-buscador
+    [estoyEnConsulta]="true"
+></app-buscador>
 
 <button type="button" class="btn btn-primary" (click)="volver()">Volver</button>
