--- a/src/app/tab-container/tab-container.component.html
+++ b/src/app/tab-container/tab-container.component.html
@@ -6,7 +6,7 @@
     <a routerLink="buscador">Buscador</a>
   </div>
   <div class="col-md-3">
-    <a routerLink="otro">OTRO</a>
+    <a routerLink="">OTRO</a>
   </div>
   <div class="col-md-3">
     <a [routerLink]="">OTRO 2</a>
